feat: implementar captura de pagamento via Stripe webhook e AWS SQS
- Adicionar configurações AWS e Stripe (AwsOptions, StripeOptions)
- Criar domínio de eventos de pagamento (PaymentEvent, PaymentEventType enum)
- Implementar use case ProcessarWebhookStripe com MediatR
- Criar publisher SQS para eventos de pagamento (SqsPaymentEventPublisher)
- Adicionar WebhooksController com endpoint POST /webhooks/stripe
- Adicionar endpoint GET /health para health check
- Criar arquivos de teste .http para webhooks do Stripe
- Configurar injeção de dependências com AWS SQS
- Adicionar scripts de deployment (package-linux.sh, package-windows.ps1)
- Criar documentação de deploy completa
- Remover CalculatorController não utilizado
- Adicionar pacotes AWSSDK.SQS e AWSSDK.Extensions.NETCore.Setup

Arquivos criados: 14
Arquivos modificados: 6
Arquivos removidos: 1

--- a/src/TorneSe.CapturaPagamento.Api/appsettings.Development.json
+++ b/src/TorneSe.CapturaPagamento.Api/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  "AppEnvironment": "Development",
+  "Aws": {
+    "Region": "us-east-1",
+    "SqsQueueUrl": "https://sqs.us-east-1.amazonaws.com/123456789/payment-events-dev"
+  },
+  "Stripe": {
+    "SigningSecret": "",
+    "ValidateSignature": false
   }
 }
