--- a/src/TorneSe.CapturaPagamento.Api/appsettings.json
+++ b/src/TorneSe.CapturaPagamento.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppEnvironment": "Development",
+  "Aws": {
+    "Region": "us-east-1",
+    "SqsQueueUrl": ""
+  },
+  "Stripe": {
+    "SigningSecret": "",
+    "ValidateSignature": false
+  },
+  "Swagger": {
+    "Url": "/swagger/v1/swagger.json"
+  }
 }
