--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,18 @@
-name: Deploy to AWS Lambda
+name: Deploy to AWS Lambda (Production)
 
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: true
+        default: 'production'
+        type: choice
+        options:
+          - production
 
 env:
   AWS_REGION: us-east-1
