fix: adicionar permissões necessárias ao workflow PR
## Problema
Erro: 'GraphQL: Resource not accessible by integration (createPullRequest)'

## Causa
O GITHUB_TOKEN padrão não tinha permissões para:
- Criar Pull Requests
- Adicionar labels
- Adicionar comentários

## Solução
Adicionar bloco 'permissions' no workflow pr-validation.yml:
- contents: read (ler código)
- pull-requests: write (criar/editar PRs)
- issues: write (adicionar comentários)

## Referência
https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token

## Comportamento Esperado
 Workflow pode criar PRs
 Workflow pode adicionar labels
 Workflow pode adicionar comentários
 Não precisa de PAT (Personal Access Token)

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -8,6 +8,11 @@ on:
       - 'fix/**'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 env:
   DOTNET_VERSION: '8.0.x'
   PROJECT_PATH: 'src/TorneSe.CapturaPagamento.Api'
