--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -16,6 +16,7 @@ permissions:
 env:
   DOTNET_VERSION: '8.0.x'
   PROJECT_PATH: 'src/TorneSe.CapturaPagamento.Api'
+  SOLUTION_PATH: 'TorneSe.CapturaPagamento.Api.sln'
   
 jobs:
   validate:
@@ -32,18 +33,18 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
           
       - name: Restore dependencies
-        run: dotnet restore ${{ env.PROJECT_PATH }}
+        run: dotnet restore ${{ env.SOLUTION_PATH }}
         
       - name: Build project
-        run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release --no-restore
+        run: dotnet build ${{ env.SOLUTION_PATH }} --configuration Release --no-restore
         
       - name: Run unit tests
-        run: dotnet test --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx"
+        run: dotnet test ${{ env.SOLUTION_PATH }} --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx"
         continue-on-error: false
           
       - name: Code coverage
         run: |
-          dotnet test --configuration Release \
+          dotnet test ${{ env.SOLUTION_PATH }} --configuration Release \
             --no-build \
             --collect:"XPlat Code Coverage" \
             --results-directory ./coverage
